audit(java): 5 modules — Log4Shell misclassified, a fix that never fires, 3 fences that don't compile
First java audit batch: collections_internals, concurrency, core_language,
design_patterns_in_java, exceptions_and_io. 175 claims checked, 21 CORRECTED,
4 SOFTENED, 3 deferred.

THE MOST-CITED JAVA CVE, GIVEN AS THE WRONG VULNERABILITY CLASS (twice):
  Log4Shell (CVE-2021-44228) was presented as the worked example of Java
  DESERIALIZATION RCE, in §2 and again in §7. It is JNDI message-lookup plus
  remote class loading over LDAP -- nothing to do with ObjectInputStream, and
  ObjectInputFilter does not defend against it. Replaced with a real
  deserialization RCE (Log4j 1.x SocketServer, CVE-2019-17571) plus an explicit
  note that Log4Shell is a different bug, since the confusion is common.

THE FILE'S HEADLINE FIX FOR ITS OWN HEADLINE PITFALL DOES NOT WORK:
  An UncaughtExceptionHandler installed via a custom ThreadFactory was given as
  the remedy for exceptions swallowed by pool.submit(). It never fires for
  submit() -- FutureTask.run() captures the throwable. Added the
  ThreadPoolExecutor.afterExecute Future-unwrapping idiom and a who-sees-what
  summary. The adjacent NOTE also had the Runnable/Callable distinction
  inverted.

FABRICATED EFFECTIVE JAVA ATTRIBUTION:
  "HashSet wrapping AbstractSet broke when addAll() internally called add()".
  Item 18's example is InstrumentedHashSet EXTENDS HashSet -- a subclass, and
  the wrapper is the FIX, not the bug. The item number was right, which is what
  made it convincing.

A WORKED EXAMPLE BUILT ON A HASH THAT ISN'T:
  `hash("foo") = 97 -> bucket 1`. "foo".hashCode() is 101574, spread 101575,
  bucket 7. Fixed by switching the key to "a" (97) and the collider to "q"
  (113), which really do collide in bucket 1 -- so every downstream figure
  (97 & 15, 97 & 16) stays correct without touching the arithmetic. All three
  values re-verified independently by the dispatcher.

THREE FENCES THAT DO NOT COMPILE (checked 